--- a/JSChallenge1/style1.css
+++ b/JSChallenge1/style1.css
@@ -1,10 +1,12 @@
 .button {
-        margin: auto;
-    
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
         
         
 body{
     background-color: purple;
-    
 }
